<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".User">

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/usr"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/profile"
                android:title="@string/my_account" />
            <item
                android:id="@+id/vehicle"
                android:title="@string/my_vehicle" />
            <item
                android:id="@+id/mission"
                android:title="@string/missions" />
            <item
                android:id="@+id/delete"
                android:title="@string/delete_account" />
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title=""
        app:showAsAction="always"
        />

</menu>