<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    tools:context = ".Register">

    <ImageView
        android:id="@+id/Register"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/usr" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:focusable="true"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:layout_alignEnd="@+id/firstname"
        android:layout_alignParentStart="true"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname"
        android:layout_alignEnd="@+id/lastname"
        android:layout_alignParentStart="true"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_alignParentStart="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:layout_alignParentStart="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:layout_alignEnd="@+id/password2"
        android:layout_alignParentStart="true"
        android:hint="@string/pin" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/Register"
        android:background="@drawable/roundstyle"
        android:layout_marginBottom="5dp"
        android:text="@string/next_button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/Register"
        android:background="@drawable/roundstyle"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel_button" />

</RelativeLayout>